<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:textColor="@color/Black"
        android:text="@string/client_locator_title"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18dp"
                android:textColor="@color/White"
                android:text="@string/inf_personnelles"
                android:textAlignment="center"
                android:background="@color/Goldenrod"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <TableRow
                    android:id="@+id/tr_institution"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_institution" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="Hopital St Luc"/>
                </TableRow>

                <TableRow

                    android:id="@+id/tr_codeSt"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_codeST"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="ST9087"/>

                </TableRow>

                <TableRow
                    android:id="@+id/tr_nom"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_nom"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="Jean"/>
                </TableRow>

                <TableRow

                    android:id="@+id/tr_prenom"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_prenom"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="Marc"/>

                </TableRow>

                <TableRow
                    android:id="@+id/tr_statutMatrimoniale"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_statutM"/>
                    <Spinner
                        android:id="@+id/sp_statutMatrimoniale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:entries="@array/statut_matrimoniale" />

                 </TableRow>
                <TableRow
                    android:id="@+id/tr_prefContact"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_prefContact"/>
                    <Spinner
                        android:id="@+id/sp_preference_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:entries="@array/preference_contact" />
                </TableRow>

                    <Button
                        android:id="@+id/btsave_inf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_text" />

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18dp"
                android:textColor="@color/White"
                android:text="@string/contact_tel"
                android:background="@color/Goldenrod"/>
            <Button
                android:id="@+id/btadd_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="18dp"
                android:textColor="@color/White"
                android:text="@string/lieu_residence"
                android:background="@color/Goldenrod"/>

            <TableLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_departement" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="Ouest"/>
                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_commune"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="Delmas"/>

                </TableRow>

                <TableRow
                       android:layout_height="wrap_content"
                       android:layout_width="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:layout_marginRight="5dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_adresse"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="46 Delmas 66"/>

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_dpd"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text=""/>
                </TableRow>

                <TableRow

                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tr_avd"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text=""/>
                </TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/White"
                    android:text="@string/personnes_contact"
                    android:background="@color/Goldenrod"/>
                <Button
                    android:id="@+id/btadd_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/White"
                    android:text="@string/lieux_frquentes"
                    android:background="@color/Goldenrod"/>

            </TableLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>

